# calypso

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: cicd.yml  tests.yml
calypso/: config.py  main.py
calypso/alembic/: alembic.ini  env.py
calypso/alembic/versions/: 2023-04-15_2203dea79fcd_init.py  2023-04-15_7c9b0157d51a_init.py  2023-05-28_ac1e52fec551_initial.py
calypso/cli/: cli.py
calypso/crud/: __init__.py  crud_user.py
calypso/db/: session.py
calypso/middleware/: __init__.py  log_requests.py
calypso/middlewares/: __init__.py  log_requests.py
calypso/models/: __init__.py  application_log.py  helper.py  request_log.py  user.py
calypso/models/mixins/: CreatedAtMixin.py  UUIDMixin.py  UpdatedAtMixin.py  __init__.py
calypso/modules/crypto/: __init__.py  password_encryption.py
calypso/modules/logger/: CalypsoLoggerClass.py  __init__.py  get_logger.py
calypso/startup/: __init__.py  root_user.py
calypso/static/calypso/: app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  vite.config.js
calypso/static/calypso/middleware/: auth.global.ts
calypso/static/calypso/pages/: index.vue  login.vue
calypso/static/calypso/plugins/: vuetify.js
calypso/static/calypso/src/: App.vue  main.js
calypso/static/calypso/src/auth/: login.vue
calypso/static/calypso/src/vuetify/: index.js  themes.js
cli/: index.html
development/environment/: index.html
development/pre-commit-hooks/: index.html
docs/: index.md
docs/cli/: index.md
docs/development/: environment.md  pre-commit-hooks.md
docs/getting_started/: index.md
search/: search_index.json
server/: main.py
setup/documentation/: index.html
tests/: conftest.py  test_something.py
tests/api/: test_healthcheck.py
tests/cli/: test_cli.py
tests/crud/: test_crud_user.py
tests/middleware/: test_log_request.py
tests/modules/crypto/: test_password_encryption.py
tests/modules/logger/: test_CalypsoLogger.py  test_get_logger.py
tests/startup/: test_root_user.py  test_startup.py
tests/utils/: MockLogger.py  __init__.py  general.py  user_factory.py
