[tool.poetry]
name = "calypso"
version = "0.0.1"
description = "Securely manage user authentication with a simple API interface. Lightweight, scalable, and customizable for small to medium-sized apps. Integrate with ease and free your application from complex authentication frameworks. "
authors = ["Maurice Künicke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
alembic = "^1.10.3"
psycopg2 = "^2.9.6"
sqlalchemy = {extras = ["mypy"], version = "^2.0.13"}
click = "^8.1.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
pytest-mock = "^3.10.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.pydocstyle]
inherit = false
ignore = ["D107","D204","D213","D100","D104","D407","D406","D203"]

[tool.poetry.scripts]
calypso = "calypso.cli.cli:cli"